fix: overflow hidden bug, small UI corrections (#13)
* fixed overflow issue

* fix bug where closed menu appears on screen resize

* change title and favicon

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,12 +7,16 @@
 
 body {
   font-family: 'Space Grotesk';
-  overflow:hidden;
+}
+
+.overall-container {
+  overflow: hidden;
+  position: relative;
 }
 
 .layout-container {
-  width: 100dvw;
-  height: 100dvh;
+  width: 100vw;
+  height: 100vh;
 }
 
 main {
@@ -20,6 +24,8 @@ main {
   padding: 3rem;
   width: fit-content;
   text-align: center;
+  width: 100%;
+  height: 100%; 
 }
 
 .timer-and-buttons-container {
@@ -109,26 +115,24 @@ button {
 
 .settings-container {
   width: 25vw;
-  height: 100vh;
+  height: 100%;
   position: absolute;
-  right: -25vw;
+  right: -800px;
   border-left:  2px solid;
-  transition: 0.25s right;
+  transition: 0.33s ease-in-out right;
   padding: 6rem 2rem;
   z-index: 3;
 }
 
 @media (max-width: 1200px) {
   .settings-container {
-    width: 33vw;
-    right: -33vw;
+    width: 50vw;
   }  
 }
 
 @media (max-width: 800px) {
   .settings-container {
     width: 100vw;
-    right: -100vw;
   }  
 }
 
